force-app/main/default/objects/Case/fields/AdditionalLeavingNotes__c.field-meta.xml
<CustomField>
    <fullName>AdditionalLeavingNotes__c</fullName>
    <description>To capture additional reasons as to why a customer is leaving us. This field is mandatory and is a place to free type further details from the closed reason field</description>
    <label>Additional leaving notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>