force-app/main/default/objects/Case/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to advice. Advice must be linked to case to send next steps email.</description>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>