force-app/main/default/objects/Case/fields/CalculatedBy__c.field-meta.xml
<CustomField>
    <fullName>CalculatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the specialist who is completing the calculation</description>
    <label>Calculated by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>