force-app/main/default/objects/Case/fields/CaseRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordTypeDeveloperName__c</fullName>
    <description>This field was added for the sole purpose of displaying the record type&#39;s developer name on email case pages so our custom Nova extension can identify email cases and display functionality accordingly.</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type Developer Name</label>
    <type>Text</type>
</CustomField>