force-app/main/default/objects/Case/fields/CoordinatorSignOff__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorSignOff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For operations coordinator to indicate all actions have been done</description>
    <inlineHelpText>Once the offboarding actions have been checked, please tick whether these actions have been reviewed and good to go</inlineHelpText>
    <label>Coordinator sign off</label>
    <type>Checkbox</type>
</CustomField>