force-app/main/default/objects/Case/fields/CreatedSource__c.field-meta.xml
<CustomField>
    <fullName>CreatedSource__c</fullName>
    <description>Used on email cases to indicate if email was initially created by an internal user, or by email-to-case functionality</description>
    <label>Created source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Email-to-case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>