force-app/main/default/objects/Case/fields/DateOfDeath__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeath__c</fullName>
    <label>Date of death</label>
    <type>Date</type>
</CustomField>