force-app/main/default/objects/Case/fields/DateOfRequest__c.field-meta.xml
<CustomField>
    <fullName>DateOfRequest__c</fullName>
    <description>Date client made the request</description>
    <label>Date of request</label>
    <type>Date</type>
</CustomField>