force-app/main/default/objects/Case/fields/DeathCertificateReceived__c.field-meta.xml
<CustomField>
    <fullName>DeathCertificateReceived__c</fullName>
    <label>Death certificate received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scanned copy</fullName>
            </value>
            <value>
                <fullName>Hard copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>