force-app/main/default/objects/Case/fields/DocumentUrl__c.field-meta.xml
<CustomField>
    <fullName>DocumentUrl__c</fullName>
    <description>A generic field to take the URL of a document we need as part of the case process, like proof of name change or death certificate.</description>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>