force-app/main/default/objects/Case/fields/EmailStatus__c.field-meta.xml
<CustomField>
    <fullName>EmailStatus__c</fullName>
    <description>Updated if most recent email is in draft, a holding email or in approval. This field is cleared when email is sent. Controlled by Email Message after save flow.</description>
    <label>Email status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email in draft</fullName>
            </value>
            <value>
                <fullName>Holding email sent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Email in approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>