force-app/main/default/objects/Case/fields/FirstNameAfter__c.field-meta.xml
<CustomField>
    <fullName>FirstNameAfter__c</fullName>
    <description>Requested name on name change request</description>
    <label>First name (after)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>