force-app/main/default/objects/Case/fields/FirstNameBefore__c.field-meta.xml
<CustomField>
    <fullName>FirstNameBefore__c</fullName>
    <description>Name currently on file for the client on name change requests</description>
    <label>First name (before)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>