force-app/main/default/objects/Case/fields/FundsReceived__c.field-meta.xml
<CustomField>
    <fullName>FundsReceived__c</fullName>
    <description>For use on P&amp;L case. To record the amount confirmed by finance that has been paid to the client. Will only be available when an the record has been approved.</description>
    <label>Funds received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>