force-app/main/default/objects/Case/fields/GoogleDriveFolder__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolder__c</fullName>
    <description>To store a related Goggle Drive folder url if applicable.</description>
    <label>Google Drive folder</label>
    <type>Url</type>
</CustomField>