force-app/main/default/objects/Case/fields/LastEmailReceivedDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastEmailReceivedDateTime__c</fullName>
    <description>This field updates with the current date and time when a new email is received on the case.</description>
    <label>Last email received date time</label>
    <type>DateTime</type>
</CustomField>