force-app/main/default/objects/Case/fields/LastNameAfter__c.field-meta.xml
<CustomField>
    <fullName>LastNameAfter__c</fullName>
    <description>Requested update to last name on name change request</description>
    <label>Last name (after)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>