force-app/main/default/objects/Case/fields/LastNameBefore__c.field-meta.xml
<CustomField>
    <fullName>LastNameBefore__c</fullName>
    <description>Current last name when name change is requested</description>
    <label>Last name (before)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>