force-app/main/default/objects/Case/fields/MiddleNameAfter__c.field-meta.xml
<CustomField>
    <fullName>MiddleNameAfter__c</fullName>
    <label>Middle Name (After)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>