force-app/main/default/objects/Case/fields/MiddleNameBefore__c.field-meta.xml
<CustomField>
    <fullName>MiddleNameBefore__c</fullName>
    <description>Middle name before requested change</description>
    <label>Middle name (before)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>