force-app/main/default/objects/Case/fields/NotifiedBy__c.field-meta.xml
<CustomField>
    <fullName>NotifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who informed us of the client passing</description>
    <inlineHelpText>The person who informed us of the client passing</inlineHelpText>
    <label>Notified by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Notified by)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>