force-app/main/default/objects/Case/fields/OffboardingCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>OffboardingCompleteDate__c</fullName>
    <label>Offboarding complete date</label>
    <type>Date</type>
</CustomField>