force-app/main/default/objects/Case/fields/OffboardingScope__c.field-meta.xml
<CustomField>
    <fullName>OffboardingScope__c</fullName>
    <label>Offboarding Scope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>