force-app/main/default/objects/Case/fields/OffboardingType__c.field-meta.xml
<CustomField>
    <fullName>OffboardingType__c</fullName>
    <description>Indicates if full or partial offboarding of household</description>
    <label>Offboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>