force-app/main/default/objects/Case/fields/OW_subtype__c.field-meta.xml
<CustomField>
    <fullName>OW_subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTBF</fullName>
                <label>Right to be forgotten</label>
            </value>
            <value>
                <fullName>DSAR</fullName>
                <label>Subject access request</label>
            </value>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Separation</fullName>
            </value>
            <value>
                <fullName>Separate Finances</fullName>
            </value>
            <value>
                <fullName>DOB change</fullName>
            </value>
            <value>
                <fullName>Country of birth change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Customer pre-advice</fullName>
            </value>
            <value>
                <fullName>Customer declined advice</fullName>
            </value>
            <value>
                <fullName>Customer in fulfilment</fullName>
            </value>
            <value>
                <fullName>Active customer</fullName>
            </value>
            <value>
                <fullName>Never signed terms</fullName>
            </value>
            <value>
                <fullName>Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>