force-app/main/default/objects/Case/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <description>Formula to display case owner, either user&#39;s name or queue name. This field is displayed instead of the OwnerId to ensure we can enforce the appropriate controls when the owner is changed.</description>
    <formula>IF(ISBLANK(Owner:Queue.QueueName),  Owner:User.FirstName + &#39; &#39; +  Owner:User.LastName , (Owner:Queue.QueueName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>