force-app/main/default/objects/Case/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>To record who will be doing the calculations on a P&amp;L case</description>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nova</fullName>
            </value>
            <value>
                <fullName>Hubwise</fullName>
            </value>
            <value>
                <fullName>OI</fullName>
            </value>
            <value>
                <fullName>Curtis banks</fullName>
            </value>
            <value>
                <fullName>Transact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>