force-app/main/default/objects/Case/fields/PLOutcome__c.field-meta.xml
<CustomField>
    <fullName>PLOutcome__c</fullName>
    <description>Record how much better or worse off the client is from the P&amp;L.</description>
    <inlineHelpText>Amount by which the client is detrimented as a result of our error. A negative value indicates the client is in fact better off</inlineHelpText>
    <label>P&amp;L outcome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>