force-app/main/default/objects/Case/fields/PostErrorTransactionsToIncorporate__c.field-meta.xml
<CustomField>
    <fullName>PostErrorTransactionsToIncorporate__c</fullName>
    <description>To record the post-error transaction to incorporate and if anything has happened after this we need to be aware of?</description>
    <label>Post-error transactions to incorporate</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>