force-app/main/default/objects/Case/fields/ReasonsForLeaving__c.field-meta.xml
<CustomField>
    <fullName>ReasonsForLeaving__c</fullName>
    <label>Reasons for leaving</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Remaining with existing adviser</fullName>
            </value>
            <value>
                <fullName>Fees too high</fullName>
            </value>
            <value>
                <fullName>Self-managing finances</fullName>
            </value>
            <value>
                <fullName>No longer require service</fullName>
            </value>
            <value>
                <fullName>Became disengaged</fullName>
            </value>
            <value>
                <fullName>Service took too long</fullName>
            </value>
            <value>
                <fullName>Unsatisfied with service</fullName>
            </value>
            <value>
                <fullName>Customer deceased</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transferred to Octopus Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>