force-app/main/default/objects/Case/fields/RedressPaidDate__c.field-meta.xml
<CustomField>
    <fullName>RedressPaidDate__c</fullName>
    <description>To store the date redress is paid on P&amp;L cases</description>
    <label>Redress paid date</label>
    <type>Date</type>
</CustomField>