force-app/main/default/objects/Case/fields/SlackChannelId__c.field-meta.xml
<CustomField>
    <fullName>SlackChannelId__c</fullName>
    <description>Stores the ID of a Slack channel dedicated to the case.</description>
    <label>Slack channel ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>