force-app/main/default/objects/Case/fields/SlaStatus__c.field-meta.xml
<CustomField>
    <fullName>SlaStatus__c</fullName>
    <description>Hidden field to display the SLA status.</description>
    <label>SLA status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside SLA</fullName>
            </value>
            <value>
                <fullName>Approaching violation</fullName>
            </value>
            <value>
                <fullName>Outside SLA</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Approval rejected</fullName>
                <isActive>false</isActive>
                <label>Approval rejected</label>
            </value>
            <value>
                <fullName>In approval</fullName>
                <isActive>false</isActive>
                <label>In approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>