force-app/main/default/objects/Case/recordTypes/AdminSupport.recordType-meta.xml
<RecordType>
    <fullName>AdminSupport</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <label>Admin support</label>
</RecordType>