force-app/main/default/objects/Case/recordTypes/CancelOnboarding.recordType-meta.xml
<RecordType>
    <fullName>CancelOnboarding</fullName>
    <active>false</active>
    <businessProcess>Standard</businessProcess>
    <description>Use when a household that that has signed TOB and has advice decides to withdraw</description>
    <label>Cancel Onboarding</label>
</RecordType>