force-app/main/default/objects/Case/recordTypes/Deceased.recordType-meta.xml
<RecordType>
    <fullName>Deceased</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Use if we are notified that a client has passed away.</description>
    <label>Deceased</label>
</RecordType>