force-app/main/default/objects/Case/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>true</active>
    <businessProcess>Email</businessProcess>
    <description>Client and provider emails</description>
    <label>Email</label>
</RecordType>