force-app/main/default/objects/Case/recordTypes/GDPR.recordType-meta.xml
<RecordType>
    <fullName>GDPR</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Use if a customer makes a request as part of their GDPR rights</description>
    <label>GDPR</label>
</RecordType>