force-app/main/default/objects/Case/recordTypes/Offboarding.recordType-meta.xml
<RecordType>
    <fullName>Offboarding</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Use where a client needs to be offboarded for any reason and at any stage of their journey with us.</description>
    <label>Offboarding</label>
</RecordType>