force-app/main/default/objects/Case/recordTypes/OperationalRequest.recordType-meta.xml
<RecordType>
    <fullName>OperationalRequest</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>For operational support.</description>
    <label>Operational Request</label>
</RecordType>