force-app/main/default/objects/Case/recordTypes/PersonalInformationChange.recordType-meta.xml
<RecordType>
    <fullName>PersonalInformationChange</fullName>
    <active>true</active>
    <businessProcess>Change Details</businessProcess>
    <description>Use to request changes to personal information like name.</description>
    <label>Personal Information Change</label>
</RecordType>