force-app/main/default/objects/Case/recordTypes/PowerOfAttorney.recordType-meta.xml
<RecordType>
    <fullName>PowerOfAttorney</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Used for any management of powers of attorney for clients. This covers scenarios like adding, activating, and removing POA for a given client.</description>
    <label>Power of attorney</label>
</RecordType>