force-app/main/default/objects/Case/recordTypes/ProfitAndLoss.recordType-meta.xml
<RecordType>
    <fullName>ProfitAndLoss</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Use to record profit and loss reconciliations.</description>
    <label>Profit &amp; Loss</label>
</RecordType>