force-app/main/default/objects/Case/recordTypes/SplitHousehold.recordType-meta.xml
<RecordType>
    <fullName>SplitHousehold</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Use where a household of 2+ advised clients needs to be split into a separate household per client (e.g. because of a divorce)</description>
    <label>Split Household</label>
</RecordType>