force-app/main/default/objects/Case/recordTypes/Withdrawal.recordType-meta.xml
<RecordType>
    <fullName>Withdrawal</fullName>
    <active>false</active>
    <businessProcess>Standard</businessProcess>
    <description>Use where a client decides to withdraw before receiving advice and signing TOB</description>
    <label>Withdrawal</label>
</RecordType>