force-app/main/default/objects/Case/validationRules/Cannot_confirm_death_on_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_confirm_death_on_creation</fullName>
    <active>true</active>
    <description>Ensures that it is not possible to confirm the death on creation of the case.</description>
    <errorConditionFormula>ISNEW()
&amp;&amp;
RecordType.DeveloperName = &apos;Deceased&apos;
&amp;&amp;
( NOT(ISBLANK( DateDeathConfirmed__c ))
||
NOT(ISPICKVAL( DeathCertificateReceived__c, &quot;&quot;)) )</errorConditionFormula>
    <errorMessage>On creation of a deceased case, you cannot confirm the date of death or how the death certificate was received. Please save and this can be added after.</errorMessage>
</ValidationRule>