force-app/main/default/objects/Case/validationRules/DocumentProofStatusAndUrl.validationRule-meta.xml
<ValidationRule>
    <fullName>DocumentProofStatusAndUrl</fullName>
    <active>true</active>
    <description>Ensures the document proof URL is only specified if we also have the correct status indicated.</description>
    <errorConditionFormula>(NOT(ISBLANK(DocumentUrl__c))
&amp;&amp;
NOT(ISPICKVAL(DocumentProof__c, &quot;RECEIVED_SAVED&quot;)))
||
(ISBLANK(DocumentUrl__c)
&amp;&amp;
ISPICKVAL(DocumentProof__c, &quot;RECEIVED_SAVED&quot;))</errorConditionFormula>
    <errorMessage>Document proof must be marked as received and saved to Drive at the same time the URL is specified.</errorMessage>
</ValidationRule>