force-app/main/default/objects/Case/validationRules/NameChangeApprovalRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NameChangeApprovalRequired</fullName>
    <active>true</active>
    <description>Ensures that approval is received before completing a name change case.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;PersonalInformationChange&quot;
&amp;&amp;
ISPICKVAL(Type, &quot;Name change&quot;)
&amp;&amp;
ISPICKVAL(Status, &quot;Complete&quot;)
&amp;&amp;
NOT(ISPICKVAL( ChangeApprovalStatus__c, &quot;Approved&quot;))</errorConditionFormula>
    <errorMessage>Approval required before this case can be completed.</errorMessage>
</ValidationRule>