force-app/main/default/objects/Case/validationRules/NameChangeApprovalStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>NameChangeApprovalStatus</fullName>
    <active>true</active>
    <description>Ensures that approval status is only controlled by the approval process.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;PersonalInformationChange&quot;
&amp;&amp;
ISPICKVAL(Type, &quot;Name change&quot;)
&amp;&amp;
((ISPICKVAL(Status, &quot;Approval&quot;)
&amp;&amp;
NOT(ISPICKVAL( ChangeApprovalStatus__c, &quot;In approval&quot;)))
||
(NOT(ISPICKVAL(Status, &quot;Approval&quot;)) &amp;&amp; ISPICKVAL( ChangeApprovalStatus__c, &quot;In approval&quot;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Moving in and out of approval status is controlled by the approval process.</errorMessage>
</ValidationRule>