force-app/main/default/objects/Case/validationRules/NameChangeApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>NameChangeApproved</fullName>
    <active>true</active>
    <description>Ensures that approved name changes must be open or move to complete.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;PersonalInformationChange&quot;
&amp;&amp;
ISPICKVAL(Type, &quot;Name change&quot;)
&amp;&amp;
ISPICKVAL( ChangeApprovalStatus__c, &quot;Approved&quot;)
&amp;&amp;
NOT(ISPICKVAL(Status, &quot;In progress&quot;) ||
ISPICKVAL(Status, &quot;On hold&quot;) ||
ISPICKVAL(Status, &quot;Complete&quot;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Approved name changes can only be open or move to complete. They cannot be cancelled.</errorMessage>
</ValidationRule>