force-app/main/default/objects/Case/validationRules/NoDeceasedCompletionWithoutFields.validationRule-meta.xml
<ValidationRule>
    <fullName>NoDeceasedCompletionWithoutFields</fullName>
    <active>true</active>
    <description>Prevents completion of deceased cases without the fields needed - date of death, date confirmed etc</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;Deceased&quot;
&amp;&amp;
ISPICKVAL(Status, &quot;Complete&quot;)
&amp;&amp;
(
ISNULL( DateOfDeath__c )
||
ISNULL( DateDeathConfirmed__c )
||
ISPICKVAL( DeathCertificateReceived__c, &quot;&quot; )
)</errorConditionFormula>
    <errorMessage>Please fill out the date of death, date death confirmed and death certificate sections.</errorMessage>
</ValidationRule>