force-app/main/default/objects/Case/validationRules/OW_no_complete_wo_sign_off.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_no_complete_wo_sign_off</fullName>
    <active>true</active>
    <description>Ensures case can&apos;t be completed unless the coordinator has signed off</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Offboarding&quot;
&amp;&amp;
ISPICKVAL(Type, &quot;OFFBOARDING_ACTIVE_CUSTOMER&quot;)
&amp;&amp;
NOT(CoordinatorSignOff__c)
&amp;&amp;
(ISPICKVAL(Status, &quot;Complete&quot;) ||
ISPICKVAL(Status, &quot;Cancelled&quot;))</errorConditionFormula>
    <errorMessage>Cases can&apos;t be completed unless the co-ordinator has signed them off</errorMessage>
</ValidationRule>